<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="AppName">Spark Notifications</string>
    <string name="SelectDonationAmount">Select a donation amount</string>
    <string name="FailedBilling">There was a problem trying to make a donation, your device may not support in app billing or there may be a problem communicating with the server. Please try again later</string>
    <string name="DevicePickedUp">Device picked up</string>
    <string name="NoRecentApps">No app has created a notification yet. Check back later.</string>
    <string name="UninstalledApp">Uninstalled App</string>
    <string name="NotificationTime">%s (%s)</string>
    <string name="IUnderstand">I understand</string>
    <string name="Notice">Notice</string>
    <string name="Set">Set</string>
    <string name="SearchApp">Search for an app</string>
    <string name="PackageName">Package Name</string>
    <string name="RecentAppTitle">App\'s title.</string>
    <string name="RecentAppNotificationTime">Notification time.</string>
    <string name="Close">Close</string>
    <string name="StoreLink" translatable="false">https://play.google.com/store/apps/details?id=com.lesorin.sparknotifications</string>
    <string name="AboutSparkNotifications" translatable="false">
        Spark Notifications is currently under development by Sorin Drăghici.\n
        \n
        This is an open-source project that can be found at <i>https://github.com/notSorin/spark-notifications</i> .\n
        \n
        Spark Notifications uses icons from <i>flaticon.com</i>. Icons used were designed by <i>Freepik https://www.flaticon.com/authors/freepik</i> .\n
        \n
        *** v. 1.0.0 (11 February 2022) ***\n
        -Initial app release.\n
        \n
        *** v. 1.0.1 (13 May 2022) ***\n
        -Maintenance update.\n
    </string>

    <!--Preferences Categories-->
    <string name="PreferenceCategoryService">Service</string>
    <string name="PreferenceCategoryOptions">Options</string>
    <string name="PreferenceCategoryAdminOptions">Administrator Options</string>
    <string name="PreferenceCategoryOther">Other</string>

    <!--Preferences-->
    <string name="ContactDeveloperTitle">Contact Developer</string>
    <string name="ContactDeveloperSummary">For bug reports, ideas, or if you want to say \"hello\" (with an ironic tone), send an email to contact.lesorin@gmail.com.</string>

    <string name="SparkNotificationsServiceTitle">Spark Notifications Service</string>
    <string name="SparkNotificationsServiceSummary">When the service is enabled, the screen will turn on when notifications are received.</string>

    <string name="ServiceDisableInfo">You will now be taken to your device\'s <i>Notification Access</i> screen.\n
        \n
        If you wish to stop <i>Spark Notifications</i>, disable its notifications access.</string>
    <string name="ServiceEnableInfo">You will now be taken to your device\'s <i>Notification Access</i> screen.\n
        \n
        For this app to work, it is required to enable its access to
        notifications in order to wake the screen when notifications are received.\n
        \n
        Spark Notifications never reads the content of your notifications. This is an open-source app,
        which means that anyone can see exactly what the app does by looking at its source code,
        available at <i>github.com/notSorin/spark-notifications</i> .
    </string>

    <string name="AllAppsEnabledTitle">Enable All Apps</string>
    <string name="AllAppsEnabledSummary">When enabled, all apps will turn the screen on when a notification is received.</string>

    <string name="EnabledAppsTitle">Enabled Apps</string>
    <string name="EnabledAppsSummary">Select which apps can turn the screen on when notifications are received.\n\nEnabled apps: %d</string>
    <string name="EnabledAppsOffSummary">Select which apps can turn the screen on when notifications are received.</string>

    <string name="RecentAppsTitle">Recent Activity</string>
    <string name="RecentAppsSummary">Displays a list with the last 50 apps that have turned the screen on. Older activity is automatically deleted.</string>

    <string name="DeviceAdminTitle">Device Administrator</string>
    <string name="DeviceAdminSummary">Enable this option to allow for custom screen timeouts.</string>

    <string name="ScreenTimeoutKey">Screen Timeout</string>
    <string name="ScreenTimeoutSummaryEnabled">The screen will turn off %d seconds after it is turned on by a notification.\n\nIf the device is unlocked, the screen will not turn off.</string>
    <string name="ScreenTimeoutSummaryEnableAdmin">The Device Administrator option must be enabled to allow for custom screen timeouts.</string>
    <string name="ScreenTimeoutSummaryEnableService">The Notifications Service must be enabled to allow for custom screen timeouts.</string>
    <string name="ScreenTimeoutSummaryEnableServiceAndAdmin">The Notifications Service and the Device Administrator option must be enabled to allow for custom screen timeouts.</string>

    <string name="ScreenOnDelayTitle">Screen Delay</string>
    <string name="ScreenOnDelaySummary">The screen will turn on %d seconds after a notification is received.</string>
    <string name="ScreenOnDelaySummarySingle">The screen will turn on %d second after a notification is received.</string>
    <string name="ScreenOnDelaySummaryZero">The screen will turn on as soon as a notification is received.</string>

    <string name="FullBrightnessTitle">Full Brightness</string>
    <string name="FullBrightnessSummary">When enabled, the screen will always turn on at full brightness.</string>

    <string name="ProximitySensorTitle">Use Proximity Sensor</string>
    <string name="ProximitySensorSummary">When enabled, the screen will not turn on when an object is close to the device\'s screen, or when the device is in your pocket.\n\nThis option is not supported by all devices.</string>

    <string name="DetectPickUpTitle">Detect Device Pick Up</string>
    <string name="DetectPickUpSummary">When enabled, the screen will turn on when the device is picked up.\n\nThis option is not supported by all devices.</string>

    <string name="OpenNotificationsDrawerTitle">Open Notifications Drawer</string>
    <string name="OpenNotificationsDrawerSummary">When enabled, the notifications drawer will open when the screen is turned on for notifications.</string>

    <string name="QuietHoursTitle">Quiet Hours</string>
    <string name="QuietHoursSummary">When enabled, the screen will not turn on between the hours below.</string>

    <string name="QuietHoursStartTitle">Quiet Hours Start</string>

    <string name="QuietHoursStopTitle">Quiet Hours Stop</string>

    <string name="DonateTitle">Support App</string>
    <string name="DonateSummary">Your support helps the app\'s development.</string>
    <string name="DonationErrorSummary">An error occurred and this action could not be completed. Please try again later.</string>
    <string name="PurchaseCancelled">Your purchase has been cancelled and you have not been charged.</string>
    <string name="DonationCompleted">Your latest donation has been completed. Your support is greatly appreciated, and it helps maintain and improve Spark Notifications.\n\nThank you!</string>

    <string name="RateAppTitle">Rate App</string>
    <string name="RateAppSummary">Your rate and review helps improve the app.</string>

    <string name="AboutAppTitle">About App</string>

    <string name="DarkThemeTitle">Dark Theme</string>
    <string name="DarkThemeTitleEasterEgg">Dark Side Overloaded</string>
    <string name="DarkThemeSummary">Enable or disable the dark side of the force.</string>
    <string name="DarkThemeSummaryEasterEgg">Don\'t let Obi-Wan find out about this…</string>
</resources>