<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory android:title="@string/PreferenceCategoryService">
        <SwitchPreference
            android:key="SparkNotificationsServiceKey"
            android:summary="@string/SparkNotificationsServiceSummary"
            android:title="@string/SparkNotificationsServiceTitle" />

        <Preference
            android:key="EnabledAppsKey"
            android:summary="@string/EnabledAppsSummary"
            android:title="@string/EnabledAppsTitle">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.lesorin.sparknotifications.AppsActivity"
                android:targetPackage="com.lesorin.sparknotifications" />
        </Preference>

        <Preference
            android:key="RecentAppsKey"
            android:summary="@string/RecentAppsSummary"
            android:title="@string/RecentAppsTitle">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.lesorin.sparknotifications.RecentAppsActivity"
                android:targetPackage="com.lesorin.sparknotifications" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/PreferenceCategoryOptions">
        <SwitchPreference
            android:key="DeviceAdminKey"
            android:summary="@string/DeviceAdminSummary"
            android:title="@string/DeviceAdminTitle" />

        <Preference
            android:key="ScreenTimeoutKey"
            android:title="@string/ScreenTimeoutKey" />

        <Preference
            android:key="ScreenOnDelayKey"
            android:summary="@string/ScreenOnDelaySummary"
            android:title="@string/ScreenOnDelayTitle" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="FullBrightnessKey"
            android:summary="@string/FullBrightnessSummary"
            android:title="@string/FullBrightnessTitle" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="NotificationsTrayKey"
            android:summary="@string/OpenNotificationsDrawerSummary"
            android:title="@string/OpenNotificationsDrawerTitle" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="ProximitySensorKey"
            android:summary="@string/ProximitySensorSummary"
            android:title="@string/ProximitySensorTitle" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="DetectPickUpKey"
            android:summary="@string/DetectPickUpSummary"
            android:title="@string/DetectPickUpTitle" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="QuietHoursKey"
            android:summary="@string/QuietHoursSummary"
            android:title="@string/QuietHoursTitle" />

        <com.lesorin.sparknotifications.views.TimePreference
            android:defaultValue="22:00"
            android:key="QuietHoursStartKey"
            android:showDefault="true"
            android:title="@string/QuietHoursStartTitle" />

        <com.lesorin.sparknotifications.views.TimePreference
            android:defaultValue="08:00"
            android:key="QuietHoursStopKey"
            android:showDefault="true"
            android:title="@string/QuietHoursStopTitle" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/help">
        <Preference
            android:key="ContactDeveloperKey"
            android:summary="@string/ContactDeveloperSummary"
            android:title="@string/ContactDeveloperTitle" />

        <Preference
            android:key="version"
            android:title="@string/version" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/donate">
        <Preference
            android:key="donate"
            android:summary="@string/donate_summary"
            android:title="@string/donate" />
    </PreferenceCategory>
</PreferenceScreen>